--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "aws": "node zDeployAws.js",
     "prod": "pm2 kill&&pm2 start hapi/start.js",
     "admin": "pm2 kill&&pm2 start admin/start.js",
-    "start": "parallelshell \"nodemon --watch admin admin/start.js\" \"node watch.js\" \"nodemon -e js,jsx,css --watch hapi hapi/start.js\" \"node zStart\"",
+    "start": "parallelshell \"nodemon --watch admin admin/start.js\" \"node watch.js\" \"nodemon -e js,jsx,css --watch hapi hapi/start.js\" \"node zDelayStart.js\"",
     "a": "babel aPre.js --out-file a.js",
     "aa": "browserify aPre.js -o a.js -t [ babelify --presets [ es2015 react stage-3 stage-2 stage-1 stage-0 ] ]",
     "b": "babel bPre.js --out-file b.js",
@@ -45,13 +45,13 @@
     "reqwest": "*",
     "serve-favicon": "*",
     "sitemap": "*",
-    "xhr2": "^0.1.3"
+    "xhr2": "*"
   },
   "devDependencies": {
     "boxen": "*",
     "chalk": "*",
     "cheerio": "*",
-    "babel": "*",
+    "babel-cli": "*",
     "babel-core": "*",
     "babel-eslint": "*",
     "babel-plugin-transform-async-to-generator": "*",
