--- a/hapi/package.json
+++ b/hapi/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.5.1",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
+    "react-icons": "^2.1.0",
     "serve-favicon": "~2.2.0"
   },
   "devDependencies": {},
