--- a/package.json
+++ b/package.json
@@ -4,19 +4,14 @@
   "description": "The code of the ilearnsmarter.com",
   "main": "index.js",
   "scripts": {
-    "stop": "node zStart",
-    "de": "git add . --all&&git commit -m update&&git push",
-    "deploy": "node zDeployStart.js",
-    "aws": "node zDeployAws.js",
-    "prod": "pm2 kill&&pm2 start hapi/start.js",
-    "admin": "pm2 kill&&pm2 start admin/start.js",
-    "start": "parallelshell \"nodemon --watch admin admin/start.js\" \"node watch.js\" \"nodemon -e js,jsx,css --watch hapi hapi/start.js\" \"node zDelayStart.js\"",
+    "prod": "node zStartDeploy",
+    "start": "parallelshell \"node watch.js\" \"nodemon --watch admin admin/start.js\" \"nodemon -e js,jsx,css --watch hapi hapi/start.js\"",
+    "stop": "parallelshell \"node watch.js\" \"nodemon --watch admin admin/start.js\" \"nodemon -e js,jsx,css --watch hapi hapi/start.js\" \"node zStartLocalTunnel.js\"",
     "a": "babel aPre.js --out-file a.js",
-    "aa": "browserify aPre.js -o a.js -t [ babelify --presets [ es2015 react stage-3 stage-2 stage-1 stage-0 ] ]",
+    "aa": "browserify aPre.js -o a.js -t [ babelify --presets [ es2015 react stage-3 stage-2 stage-1 stage-0 ] ] -im",
     "b": "babel bPre.js --out-file b.js",
-    "bb": "browserify bPre.js -o b.js -t [ babelify --presets [ es2015 react stage-3 stage-2 stage-1 stage-0 ] ]",
     "c": "babel cPre.js --out-file c.js",
-    "d": "babel dPre.js --out-file d.js",
+    "de": "git add . --all&&git commit -m update&&git push",
     "watch": "babel watchBefore.js --out-file watch.js",
     "test": "mocha --timeout 15000 test.js"
   },
