--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "express-react-views": "*",
     "express-session": "*",
     "fs-extra": "*",
+    "helmet": "^2.1.1",
     "justdo": "*",
+    "mobx": "^2.3.3",
+    "mobx-react": "^3.4.0",
     "proud-db": "*",
     "ramda": "*",
     "react": "*",
