--- a/package.json
+++ b/package.json
@@ -46,9 +46,6 @@
     "xhr2": "*"
   },
   "devDependencies": {
-    "boxen": "*",
-    "chalk": "*",
-    "cheerio": "*",
     "babel-cli": "*",
     "babel-core": "*",
     "babel-eslint": "*",
@@ -70,23 +67,27 @@
     "babel-register": "*",
     "babel-runtime": "*",
     "babelify": "*",
+    "boxen": "*",
+    "chalk": "*",
+    "cheerio": "*",
     "draft-js": "*",
-    "griddle-react": "*",
-    "istanbul": "*",
     "eslint": "*",
     "eslint-plugin-babel": "*",
     "eslint-plugin-flow-vars": "*",
     "eslint-plugin-react": "*",
-    "react-hot-loader": "*",
+    "griddle-react": "*",
+    "istanbul": "*",
+    "karma-mocha": "^1.1.1",
     "ramda-fantasy": "*",
     "ramjet": "*",
+    "react-hot-loader": "*",
     "sane": "*",
     "scrape-it": "*",
-    "unexpected": "*",
-    "webpack": "*",
-    "webpack-dev-server": "*",
     "twit": "*",
-    "victory": "*"
+    "unexpected": "*",
+    "victory": "*",
+    "webpack": "*",
+    "webpack-dev-server": "*"
   },
   "browserify": {
     "transform": [
