--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "prod": "node zStartDeploy",
     "start": "parallelshell \"node watch.js\" \"nodemon --watch admin admin/start.js\" \"nodemon -e js,jsx,css --watch hapi hapi/start.js\"",
-    "stop": "parallelshell \"node watch.js\" \"nodemon --watch admin admin/start.js\" \"nodemon -e js,jsx,css --watch hapi hapi/start.js\" \"node zStartLocalTunnel.js\"",
     "a": "babel aPre.js --out-file a.js",
     "aa": "browserify aPre.js -o a.js -t [ babelify --presets [ es2015 react stage-3 stage-2 stage-1 stage-0 ] ] -im",
     "b": "babel bPre.js --out-file b.js",
     "c": "babel cPre.js --out-file c.js",
     "de": "git add . --all&&git commit -m update&&git push",
+    "stop": "git add . --all&&git commit -m update&&git push",
     "watch": "babel watchBefore.js --out-file watch.js",
     "test": "mocha --timeout 15000 test.js"
   },
