--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,10 @@
 {
-    "presets": ["es2015", "react", "stage-3", "stage-2", "stage-1", "stage-0"],
+    "presets": ["react", "es2015","stage-3", "stage-2", "stage-1", "stage-0"],
     "env": {
         "development": {
         "plugins": [
+                "transform-class-properties",
+                "transform-decorators-legacy",
                 "transform-function-bind",
                 "transform-object-rest-spread",
                 "transform-regenerator",
@@ -12,6 +14,6 @@
             ]
         }
     },
-    "sourceRoot": "/home/just/just",
+    "sourceRoot": "/home/just/ils",
     "comments": false
  }
