--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "mobx": "^2.3.3",
     "mobx-react": "^3.4.0",
     "moment": "^2.14.1",
-    "node-bing-api": "^2.4.1",
     "proud-db": "*",
     "ramda": "*",
     "react": "*",
@@ -51,6 +50,10 @@
     "xhr2": "*"
   },
   "devDependencies": {
+    "download": "^5.0.2",
+    "imgur": "^0.1.7",
+    "node-bing-api": "^2.4.1",
+    "probe-image-size": "^2.0.1",
     "babel-cli": "*",
     "babel-core": "*",
     "babel-eslint": "*",
