--- a/package.json
+++ b/package.json
@@ -50,10 +50,6 @@
     "xhr2": "*"
   },
   "devDependencies": {
-    "download": "^5.0.2",
-    "imgur": "^0.1.7",
-    "node-bing-api": "^2.4.1",
-    "probe-image-size": "^2.0.1",
     "babel-cli": "*",
     "babel-core": "*",
     "babel-eslint": "*",
@@ -80,20 +76,26 @@
     "boxen": "*",
     "chalk": "*",
     "cheerio": "*",
+    "download": "^5.0.2",
     "draft-js": "*",
     "eslint": "*",
     "eslint-plugin-babel": "*",
     "eslint-plugin-flow-vars": "*",
     "eslint-plugin-react": "*",
     "griddle-react": "*",
+    "image-size": "^0.5.0",
+    "imgur": "^0.1.7",
     "istanbul": "*",
     "karma-mocha": "^1.1.1",
+    "lwip": "0.0.9",
+    "node-bing-api": "^2.4.1",
+    "probe-image-size": "^2.0.1",
     "ramda-fantasy": "*",
     "ramjet": "*",
     "react-hot-loader": "*",
     "sane": "*",
-    "siege": "*",
     "scrape-it": "*",
+    "siege": "*",
     "twit": "*",
     "unexpected": "*",
     "victory": "*",
