--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prod": "node zStartDeploy",
-    "start": "parallelshell \"node zStart\" \"nodemon -e js,jsx,css --watch admin admin/start.js\" \"nodemon -e js,jsx,css --watch hapi hapi/start.js\"",
+    "start": "parallelshell \"node watch\" \"node zStart\" \"nodemon -e js,jsx,css --watch admin admin/start.js\" \"nodemon -e js,jsx,css --watch hapi hapi/start.js\"",
     "c9": "parallelshell \"node watch\" \"node zStart\" \"nodemon -e js,jsx,css --watch admin admin/startC9.js\" \"nodemon -e js,jsx,css --watch hapi hapi/startC9.js\"",
     "a": "babel aPre.js --out-file a.js",
     "aa": "browserify aPre.js -o a.js -t [ babelify --presets [ es2015 react stage-3 stage-2 stage-1 stage-0 ] ] -im",
@@ -23,6 +23,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "ape-watching": "^2.1.2",
     "body-parser": "*",
     "compression": "*",
     "cookie-parser": "*",
@@ -31,6 +32,7 @@
     "express-minify": "^0.2.0",
     "express-react-views": "*",
     "express-session": "*",
+    "file-exists": "^1.0.0",
     "fs-extra": "*",
     "helmet": "^2.1.1",
     "justdo": "*",
