--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "*",
     "react-markdown": "*",
     "react-select": "^1.0.0-beta13",
+    "redis": "^2.6.2",
     "request": "*",
     "reqwest": "*",
     "serve-favicon": "*",
