--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   },
   "license": "ISC",
   "dependencies": {
-    "ape-watching": "^2.1.2",
     "body-parser": "*",
     "compression": "*",
     "cookie-parser": "*",
@@ -32,7 +31,6 @@
     "express-minify": "^0.2.0",
     "express-react-views": "*",
     "express-session": "*",
-    "file-exists": "^1.0.0",
     "fs-extra": "*",
     "helmet": "^2.1.1",
     "justdo": "*",
@@ -44,8 +42,6 @@
     "react": "*",
     "react-dom": "*",
     "react-markdown": "*",
-    "react-select": "^1.0.0-beta13",
-    "redis": "^2.6.2",
     "request": "*",
     "reqwest": "*",
     "serve-favicon": "*",
@@ -53,6 +49,7 @@
     "xhr2": "*"
   },
   "devDependencies": {
+    "ape-watching": "^2.1.2",
     "babel-cli": "*",
     "babel-core": "*",
     "babel-eslint": "*",
@@ -86,6 +83,7 @@
     "eslint-plugin-flow-vars": "*",
     "eslint-plugin-react": "*",
     "griddle-react": "*",
+    "file-exists": "^1.0.0",
     "image-size": "^0.5.0",
     "imgur": "^0.1.7",
     "istanbul": "*",
@@ -97,14 +95,15 @@
     "ramjet": "*",
     "react-hot-loader": "*",
     "react-notification": "^5.0.7",
-    "sane": "*",
+    "react-select": "^1.0.0-beta13",
     "scrape-it": "*",
     "siege": "*",
     "twit": "*",
     "unexpected": "*",
     "victory": "*",
     "webpack": "*",
-    "webpack-dev-server": "*"
+    "webpack-dev-server": "*",
+    "winston": "^2.2.0"
   },
   "browserify": {
     "transform": [
