--- a/package.json
+++ b/package.json
@@ -78,12 +78,13 @@
     "cheerio": "*",
     "download": "^5.0.2",
     "draft-js": "*",
+    "envify": "^3.4.1",
     "eslint": "*",
     "eslint-plugin-babel": "*",
     "eslint-plugin-flow-vars": "*",
     "eslint-plugin-react": "*",
-    "griddle-react": "*",
     "file-exists": "^1.0.0",
+    "griddle-react": "*",
     "image-size": "^0.5.0",
     "imgur": "^0.1.7",
     "istanbul": "*",
