--- a/package.json
+++ b/package.json
@@ -25,21 +25,22 @@
   "dependencies": {
     "body-parser": "*",
     "compression": "*",
-    "connect-ensure-login": "^0.1.1",
+    "connect-ensure-login": "*",
     "cookie-parser": "*",
     "dotenv-helper": "*",
     "express": "*",
-    "express-minify": "^0.2.0",
+    "express-minify": "*",
     "express-react-views": "*",
     "express-session": "*",
     "fs-extra": "*",
-    "helmet": "^2.1.1",
+    "helmet": "*",
     "justdo": "*",
-    "mobx": "^2.3.3",
-    "mobx-react": "^3.4.0",
-    "moment": "^2.14.1",
-    "mongoose": "^4.5.8",
-    "passport": "^0.3.2",
+    "mobx": "*",
+    "mobx-react": "*",
+    "moment": "*",
+    "mongoose": "*",
+    "passport": "*",
+    "passport-twitter": "*",
     "proud-db": "*",
     "ramda": "*",
     "react": "*",
@@ -52,14 +53,15 @@
     "xhr2": "*"
   },
   "devDependencies": {
-    "ape-watching": "^2.1.2",
-    "async": "^2.0.1",
+    "recursive-readdir": "*",
+    "ape-watching": "*",
+    "async": "*",
     "babel-cli": "*",
     "babel-core": "*",
     "babel-eslint": "*",
     "babel-plugin-transform-async-to-generator": "*",
-    "babel-plugin-transform-class-properties": "^6.10.2",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-class-properties": "*",
+    "babel-plugin-transform-decorators-legacy": "*",
     "babel-plugin-transform-do-expressions": "*",
     "babel-plugin-transform-function-bind": "*",
     "babel-plugin-transform-object-assign": "*",
@@ -80,29 +82,30 @@
     "boxen": "*",
     "chalk": "*",
     "cheerio": "*",
-    "download": "^5.0.2",
+    "download": "*",
     "draft-js": "*",
-    "envify": "^3.4.1",
+    "envify": "*",
     "eslint": "*",
     "eslint-plugin-babel": "*",
     "eslint-plugin-flow-vars": "*",
     "eslint-plugin-react": "*",
-    "file-exists": "^1.0.0",
+    "file-exists": "*",
     "griddle-react": "*",
-    "image-size": "^0.5.0",
-    "imgur": "^0.1.7",
+    "mocha": "*",
+    "image-size": "*",
+    "imgur": "*",
     "istanbul": "*",
-    "karma-mocha": "^1.1.1",
-    "lwip": "0.0.9",
-    "meme-maker": "^2.1.2",
-    "node-bing-api": "^2.4.1",
-    "probe-image-size": "^2.0.1",
+    "karma-mocha": "*",
+    "lwip": "*",
+    "meme-maker": "*",
+    "node-bing-api": "*",
+    "probe-image-size": "*",
     "ramda-fantasy": "*",
     "ramjet": "*",
     "react-hot-loader": "*",
-    "react-notification": "^5.0.7",
-    "react-select": "^1.0.0-beta13",
-    "response-time": "^2.3.1",
+    "react-notification": "*",
+    "react-select": "*",
+    "response-time": "*",
     "scrape-it": "*",
     "siege": "*",
     "twit": "*",
@@ -110,7 +113,7 @@
     "victory": "*",
     "webpack": "*",
     "webpack-dev-server": "*",
-    "winston": "^2.2.0"
+    "winston": "*"
   },
   "browserify": {
     "transform": [
