--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "xhr2": "*"
   },
   "devDependencies": {
-    "recursive-readdir": "*",
     "ape-watching": "*",
     "async": "*",
     "babel-cli": "*",
@@ -91,20 +90,23 @@
     "eslint-plugin-react": "*",
     "file-exists": "*",
     "griddle-react": "*",
-    "mocha": "*",
     "image-size": "*",
     "imgur": "*",
     "istanbul": "*",
     "karma-mocha": "*",
     "lwip": "*",
     "meme-maker": "*",
+    "mocha": "*",
     "node-bing-api": "*",
     "probe-image-size": "*",
     "ramda-fantasy": "*",
     "ramjet": "*",
+    "rc-slider": "^3.8.2",
     "react-hot-loader": "*",
+    "react-lazyload": "^2.1.4",
     "react-notification": "*",
     "react-select": "*",
+    "recursive-readdir": "*",
     "response-time": "*",
     "scrape-it": "*",
     "siege": "*",
