--- a/package.json
+++ b/package.json
@@ -101,9 +101,10 @@
     "probe-image-size": "*",
     "ramda-fantasy": "*",
     "ramjet": "*",
-    "rc-slider": "^3.8.2",
+    "rc-slider": "*",
+    "react-flip-move": "*",
     "react-hot-loader": "*",
-    "react-lazyload": "^2.1.4",
+    "react-lazyload": "*",
     "react-notification": "*",
     "react-select": "*",
     "recursive-readdir": "*",
