--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "fs-extra": "*",
     "helmet": "*",
     "justdo": "*",
+    "markdown": "^0.5.0",
     "mobx": "*",
     "mobx-react": "*",
     "moment": "*",
@@ -84,15 +85,12 @@
     "babel-register": "*",
     "babel-runtime": "*",
     "babelify": "*",
-    "boxen": "*",
     "browser-perf": "*",
-    "chalk": "*",
     "cheerio": "*",
-    "cwebp-bin": "^3.2.0",
+    "cwebp-bin": "*",
     "download": "*",
-    "draft-js": "*",
     "envify": "*",
-    "enzyme": "^2.4.1",
+    "enzyme": "*",
     "eslint": "*",
     "eslint-plugin-babel": "*",
     "eslint-plugin-flow-vars": "*",
@@ -108,39 +106,37 @@
     "istanbul": "*",
     "jsdom": "*",
     "karma-mocha": "*",
-    "kefir": "^3.3.0",
+    "kefir": "*",
     "lwip": "*",
     "meme-maker": "*",
     "mocha": "*",
     "node-bing-api": "*",
     "probe-image-size": "*",
-    "psi": "^2.0.4",
-    "pug": "^2.0.0-beta4",
+    "psi": "*",
+    "localforage": "*",
     "ramda-fantasy": "*",
     "ramjet": "*",
     "rc-slider": "*",
-    "react-addons-shallow-compare": "^15.3.1",
-    "react-addons-test-utils": "^15.3.0",
+    "react-addons-shallow-compare": "*",
+    "react-addons-test-utils": "*",
+    "react-addons-css-transition-group": "*",
     "react-flip-move": "*",
     "react-hot-loader": "*",
     "react-lazyload": "*",
     "react-notification": "*",
-    "react-s-alert": "^1.1.4",
+    "react-s-alert": "*",
     "react-select": "*",
-    "response-time": "*",
     "scrape-it": "*",
-    "sinon": "^1.17.5",
-    "superagent": "^2.1.0",
-    "superagent-mocker": "^0.4.0",
+    "sinon": "*",
+    "superagent": "*",
+    "superagent-mocker": "*",
     "syntux": "*",
-    "twit": "*",
     "unexpected": "*",
-    "victory": "*",
     "webpack": "*",
     "webpack-dev-server": "*",
     "winston": "*",
-    "yellowlabtools": "^1.11.1",
-    "zen-observable": "^0.3.0"
+    "yellowlabtools": "*",
+    "zen-observable": "*"
   },
   "browserify": {
     "transform": [
