--- a/hot/package.json
+++ b/hot/package.json
@@ -33,16 +33,18 @@
         "babel-preset-es2015": "^6.0.15",
         "babel-preset-react": "^6.0.15",
         "babel-preset-stage-0": "^6.0.15",
-        "eslint": "^1.10.3",
-        "eslint-plugin-react": "^3.6.2",
-        "react-hot-loader": "^1.3.0",
-        "webpack": "^1.12.2",
-        "webpack-dev-server": "^1.12.1"
+        "eslint": "*",
+        "eslint-plugin-react": "*",
+        "react-hot-loader": "*",
+        "webpack": "*",
+        "webpack-dev-server": "*"
     },
     "dependencies": {
-        "react": "^0.14.6",
+        "react": "*",
         "react-addons-css-transition-group": "^0.14.8",
-        "react-dom": "^0.14.6",
-        "victory": "^0.5.1"
+        "react-dom": "*",
+        "victory": "^0.5.1",
+        "response-time": "*",
+        "twit": "*"
     }
 }
