--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "fs-extra": "*",
     "helmet": "*",
     "justdo": "*",
+    "line-by-line": "^0.1.5",
     "markdown": "^0.5.0",
     "mobx": "*",
     "mobx-react": "*",
@@ -127,6 +128,8 @@
     "react-s-alert": "*",
     "react-select": "*",
     "scrape-it": "*",
+    "socket.io": "*",
+    "socket.io-client": "*",
     "sinon": "*",
     "superagent": "*",
     "superagent-mocker": "*",
