--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "The code of the ilearnsmarter.com",
   "main": "hapi/spdy.js",
   "scripts": {
-    "x": "parallelshell \"google-chrome --enable-precise-memory-info\" \"node watch\" \"node zStart\" \"nodemon -e js,jsx,css --watch hapi hapi/start.js\" \"webdriver-manager start\"",
-    "start": "parallelshell \"node watch\" \"node zStart\" \"nodemon -e js,jsx,css --watch hapi hapi/start.js\" \"webdriver-manager start\"",
+    "x": "parallelshell \"google-chrome --enable-precise-memory-info\" \"node watch\" \"node zStart\" \"webdriver-manager start\" \"nodemon -e js,jsx,css --watch hapi hapi/start.js\" \"webdriver-manager start\"",
+    "start": "parallelshell \"node watch\" \"node zStart\" \"nodemon -e js,jsx,css --watch hapi hapi/start.js\"",
     "a": "babel aPre.js --out-file a.js",
     "aa": "browserify aPre.js -o a.js -t [ babelify --presets [ es2015 react stage-3 stage-2 stage-1 stage-0 ] ] -im",
     "b": "node benchmark.js",
@@ -119,15 +119,12 @@
     "ramda-fantasy": "*",
     "ramjet": "*",
     "rc-slider": "*",
-    "react-addons-shallow-compare": "*",
     "react-addons-test-utils": "*",
     "react-addons-css-transition-group": "*",
     "react-flip-move": "*",
-    "react-hot-loader": "*",
     "react-lazyload": "*",
     "react-notification": "*",
     "react-s-alert": "*",
-    "react-select": "*",
     "scrape-it": "*",
     "socket.io": "*",
     "socket.io-client": "*",
@@ -136,9 +133,7 @@
     "superagent-mocker": "*",
     "syntux": "*",
     "unexpected": "*",
-    "webpack": "*",
     "webpack-dev-server": "*",
-    "winston": "*",
     "yellowlabtools": "*",
     "zen-observable": "*"
   },
@@ -149,11 +144,7 @@
         {
           "presets": [
             "react",
-            "es2015",
-            "stage-3",
-            "stage-2",
-            "stage-1",
-            "stage-0"
+            "es2015"
           ]
         }
       ]
