--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express-react-views": "*",
     "express-session": "*",
     "fs-extra": "*",
+    "glob": "^7.0.6",
     "helmet": "*",
     "justdo": "*",
     "line-by-line": "^0.1.5",
